unit_tests/regression.suite/multiline-string.err
   : // force syntax error
   ^
(Line 4 char 4): ERROR: Syntax error
