unit_tests/regression.suite/multiline-string.lsl
default{timer(){

"a
»b": // force syntax error

}}